--- a/file-service/src/main/resources/application.yml
+++ b/file-service/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+# 该微服务对外网开放
+# 开放部分接口
+# 开放静态资源访问
+
 server:
   port: 8001
 spring:
@@ -11,15 +15,16 @@ spring:
     resources:
       static-locations:
         - classpath:/public
-        - file:/${myconfig.filelocation}
+        - file:/${myconfig.public-file-location}
+  application:
+    name: file-service
 mybatis:
   mapper-locations: classpath:/file/dao/mapper/*.xml
   type-aliases-package: file.entity
-  application:
-    name: file-service
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka/
 myconfig:
-  filelocation: C:/Users/dell/Desktop/新建文件夹
+  public-file-location: C:/Users/dell/Desktop/新建文件夹
+  file-location: C:/Users/dell/Desktop/新建文件夹02
