--- a/gate/src/main/resources/application.yml
+++ b/gate/src/main/resources/application.yml
@@ -9,3 +9,5 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:7001/eureka/
+myconfig:
+  file-server-url: http://localhost:8001
