完成微服务点赞、取消接口

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>eureka</module>
         <module>auth-service</module>
         <module>file-service</module>
+        <module>blog-service</module>
     </modules>
     <groupId>tao</groupId>
     <artifactId>bbs</artifactId>
