--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -1,13 +1,11 @@
 server:
   port: 8000
 spring:
-  profiles:
-    active: dev
   #数据源配置
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/project_final?useUnicode=true
+    url: jdbc:mysql://localhost:3306/personal_project?useUnicode=true
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     host: localhost
