--- a/gate/pom.xml
+++ b/gate/pom.xml
@@ -27,6 +27,11 @@
         <artifactId>commons-fileupload</artifactId>
         <version>1.4</version>
     </dependency>
+    <!--  redis整合  -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
